modules/gdscript/tests/scripts/analyzer/errors/incompatible_assignment.gd
func test():
	var foo: bool = true
	foo += 'bar'
